Upgrade to Java 17. Few required changes. Lots of changes to utilize new language features. Some optimizations.