@@ -367,7 +367,7 @@ public class EDDGridCopy extends EDDGrid {
                     MustBe.throwableToString(t));
             }
             if (taskNumber >= 0) {
-                EDStatic.lastAssignedTask.put(datasetID, new Integer(taskNumber));
+                EDStatic.lastAssignedTask.put(datasetID, Integer.valueOf(taskNumber));
                 EDStatic.ensureTaskThreadIsRunningIfNeeded();  //clients (like this class) are responsible for checking on it
             }
         }
