@@ -185,11 +185,11 @@ public class LineAttribute implements Attribute, Cloneable {
    **/
   public void setMarkHeightP(double markh) {
     if(markHeightP_ != markh) {
-      Double tempOld = new Double(markHeightP_);
+      Double tempOld = Double.valueOf(markHeightP_);
       markHeightP_ = markh;
       firePropertyChange("markHeightP",
                                   tempOld,
-                                  new Double(markHeightP_));
+                                  Double.valueOf(markHeightP_));
     }
   }
   /**
@@ -208,11 +208,11 @@ public class LineAttribute implements Attribute, Cloneable {
    **/
   public void setStyle(int st) {
     if(style_ != st) {
-      Integer tempOld = new Integer(style_);
+      Integer tempOld = Integer.valueOf(style_);
       style_ = st;
       firePropertyChange("style",
                                   tempOld,
-                                  new Integer(style_));
+                                  Integer.valueOf(style_));
     }
   }
   /**
@@ -238,11 +238,11 @@ public class LineAttribute implements Attribute, Cloneable {
    **/
   public void setWidth(float t) {
     if(width_ != t) {
-      Float tempOld = new Float(width_);
+      Float tempOld = Float.valueOf(width_);
       width_ = t;
       firePropertyChange("width",
                                   tempOld,
-                                  new Float(width_));
+                                  Float.valueOf(width_));
     }
   }
   /**
@@ -285,11 +285,11 @@ public class LineAttribute implements Attribute, Cloneable {
    */
   public void setDashPhase(float phase) {
     if(dashPhase_ != phase) {
-      Float tempOld = new Float(dashPhase_);
+      Float tempOld = Float.valueOf(dashPhase_);
       dashPhase_ = phase;
       firePropertyChange("dashPhase",
                                   tempOld,
-                                  new Float(dashPhase_));
+                                  Float.valueOf(dashPhase_));
     }
   }
   /**
@@ -331,13 +331,13 @@ public class LineAttribute implements Attribute, Cloneable {
    **/
   public void setMark(int mark) {
     if(mark_ != mark) {
-      Integer tempOld = new Integer(mark_);
+      Integer tempOld = Integer.valueOf(mark_);
       if(mark <= 0) mark = 1;
       if(mark > 51) mark = 51;
       mark_ = mark;
       firePropertyChange("mark",
                                   tempOld,
-                                  new Integer(mark_));
+                                  Integer.valueOf(mark_));
     }
   }
   /**
@@ -356,11 +356,11 @@ public class LineAttribute implements Attribute, Cloneable {
    */
   public void setCapStyle(int style) {
     if(cap_style_ != style) {
-      Integer tempOld = new Integer(cap_style_);
+      Integer tempOld = Integer.valueOf(cap_style_);
       cap_style_ = style;
       firePropertyChange("capStyle",
                                   tempOld,
-                                  new Integer(cap_style_));
+                                  Integer.valueOf(cap_style_));
     }
   }
   /**
@@ -376,11 +376,11 @@ public class LineAttribute implements Attribute, Cloneable {
    * <BR><strong>Property Change:</strong> <code>miterStyle</code>.   */
   public void setMiterStyle(int style) {
     if(miter_style_ != style) {
-      Integer tempOld = new Integer(miter_style_);
+      Integer tempOld = Integer.valueOf(miter_style_);
       miter_style_ = style;
       firePropertyChange("miterStyle",
                                   tempOld,
-                                  new Integer(miter_style_));
+                                  Integer.valueOf(miter_style_));
     }
   }
   /**
@@ -395,11 +395,11 @@ public class LineAttribute implements Attribute, Cloneable {
    */
   public void setMiterLimit(float limit) {
     if(miter_limit_ != limit) {
-      Float tempOld = new Float(miter_limit_);
+      Float tempOld = Float.valueOf(miter_limit_);
       miter_limit_ = limit;
       firePropertyChange("miterLimit",
                                   tempOld,
-                                  new Float(miter_limit_));
+                                  Float.valueOf(miter_limit_));
     }
   }
   /**
