@@ -297,7 +297,7 @@ public class ContourLevelsDialog extends JDialog {
     model_ = new ConLevelTableModel();
     for(int i=0; i < size; i++) {
       try {
-	val = new Double(conLevels_.getLevel(i));
+	val = Double.valueOf(conLevels_.getLevel(i));
 	attr = conLevels_.getContourLineAttribute(i);
 	model_.add(val, attr);
       } catch (ContourLevelNotFoundException e) {
@@ -340,7 +340,7 @@ public class ContourLevelsDialog extends JDialog {
     int index = table_.getSelectedRow();
     if(index < 0) return;
     model_.insert(index,
-		  new Double(0.0),
+		  Double.valueOf(0.0),
 		  new ContourLineAttribute(ContourLineAttribute.SOLID));
   }
 
@@ -348,7 +348,7 @@ public class ContourLevelsDialog extends JDialog {
     int index = table_.getSelectedRow();
     if(index < 0) return;
     model_.insert(index + 1,
-		  new Double(0.0),
+		  Double.valueOf(0.0),
 		  new ContourLineAttribute(ContourLineAttribute.SOLID));
   }
 
@@ -450,7 +450,7 @@ public class ContourLevelsDialog extends JDialog {
 	if(obj instanceof Double) {
 	  values.setElementAt(obj, row);
 	} else if(obj instanceof String) {
-	  values.setElementAt(new Double((String)obj), row);
+	  values.setElementAt(Double.valueOf((String)obj), row);
 	}
       } else {
 	attr.setElementAt(obj, row);
