@@ -699,7 +699,7 @@ public class GridAttributeDialog extends JDialog {
     int index = conLevelTable_.getSelectedRow();
     if(index < 0) return;
     conLevelModel_.insert(index,
-                          new Double(0.0),
+                          Double.valueOf(0.0),
                           new ContourLineAttribute(ContourLineAttribute.SOLID));
   }
 
@@ -707,7 +707,7 @@ public class GridAttributeDialog extends JDialog {
     int index = conLevelTable_.getSelectedRow();
     if(index < 0) return;
     conLevelModel_.insert(index + 1,
-                          new Double(0.0),
+                          Double.valueOf(0.0),
                           new ContourLineAttribute(ContourLineAttribute.SOLID));
   }
 
@@ -755,7 +755,7 @@ public class GridAttributeDialog extends JDialog {
     int size = conLevels_.size();
     for(int i=0; i < size; i++) {
       try {
-        val = new Double(conLevels_.getLevel(i));
+        val = Double.valueOf(conLevels_.getLevel(i));
         attr = conLevels_.getContourLineAttribute(i);
         conLevelModel_.add(val, attr);
       } catch (ContourLevelNotFoundException e) {
@@ -856,7 +856,7 @@ public class GridAttributeDialog extends JDialog {
         if(obj instanceof Double) {
           values.setElementAt(obj, row);
         } else if(obj instanceof String) {
-          values.setElementAt(new Double((String)obj), row);
+          values.setElementAt(Double.valueOf((String)obj), row);
         }
       } else {
         attr.setElementAt(obj, row);
