@@ -426,7 +426,7 @@ public class LineAttributeDialog extends JDialog {
     int index = 0;
     float[] array = new float[token.countTokens()];
     while(token.hasMoreTokens()) {
-      array[index] = new Float(token.nextToken()).floatValue();
+      array[index] = Float.valueOf(token.nextToken()).floatValue();
       index++;
     }
     return array;
@@ -454,14 +454,14 @@ public class LineAttributeDialog extends JDialog {
     //
     // mark height
     //
-    attr_.setMarkHeightP(new Double(markHeightTextField.getText()).doubleValue());
+    attr_.setMarkHeightP(Double.valueOf(markHeightTextField.getText()).doubleValue());
     //
     // stroke attributes
     //
     //
     // width
     //
-    attr_.setWidth(new Float(widthTextField.getText()).floatValue());
+    attr_.setWidth(Float.valueOf(widthTextField.getText()).floatValue());
     //
     // dash array
     //
@@ -469,7 +469,7 @@ public class LineAttributeDialog extends JDialog {
     //
     // dash phase
     //
-    attr_.setDashPhase(new Float(dashPhaseTextField.getText()).floatValue());
+    attr_.setDashPhase(Float.valueOf(dashPhaseTextField.getText()).floatValue());
     //
     // cap style
     //
@@ -481,7 +481,7 @@ public class LineAttributeDialog extends JDialog {
     //
     // miter limit
     //
-    attr_.setMiterLimit(new Float(miterLimitTextField.getText()).floatValue());
+    attr_.setMiterLimit(Float.valueOf(miterLimitTextField.getText()).floatValue());
 
     attr_.setBatch(false);
     //
